--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,9 +3,8 @@
 
 name: Python application
 
-on:
-  pull_request:
-    branches: [ "main" ]
+on: 
+  workflow_dispatch:
 
 permissions:
   contents: read
