--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,26 +18,24 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Create .env file
-        env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          TEST_DB_NAME: ${{ secrets.TEST_DB_NAME }}
-        run: |
-          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
-          echo "TEST_DB_NAME=${{ secrets.TEST_DB_NAME }}" >> .env
-
-      
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
           
-      - name: Install dependencies
+      - name: Install dependencies and env
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          TEST_DB_NAME: ${{ secrets.TEST_DB_NAME }}
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "TEST_DB_NAME=${{ secrets.TEST_DB_NAME }}" >> .env
+          ls
           
       - name: Lint with flake8
         run: |
