--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,14 +16,13 @@ jobs:
     steps:
     
       - uses: actions/checkout@v3
-      
-      - name: Create .env file
+    
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
           
-      - name: Install dependencies and env
+      - name: Install dependencies
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           DB_NAME: ${{ secrets.DB_NAME }}
